--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,8 +127,8 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-
       <%# 出品されている場合、一覧を表示 %>
+<% if @items.present?%>
       <% @items.each do |item| %>
       <li class='list'>
           <%= link_to "item_path" do %>
@@ -147,43 +147,53 @@
             <h3 class='item-name'>
               <%= item.name %>
             </h3>
-          <div class='item-price'>
-            <span><%= item.price %>円<br><%= item.delivery_fee.name %></span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
-            </div>
-          </div>
-        </div>
-        <% end %>
-        
-      </li>
-      <% end %>
-
-      
-
-      
-      <%# 出品がない場合、ダミーを表示 %>
-      <% if @items.nil? %> 
-        <li class='list'>
-          <%= link_to '#' do %>
-            <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
-            <div class='item-info'>
-              <h3 class='item-name'>
-                商品を出品してね！
-              </h3>
             <div class='item-price'>
-            <span>99999999円<br>(税込み)</span>
+              <span><%= item.price %>円<br><%= item.delivery_fee.name %></span>
               <div class='star-btn'>
                 <%= image_tag "star.png", class:"star-icon" %>
                 <span class='star-count'>0</span>
               </div>
             </div>
           </div>
+       
           <% end %>
-        </li>
+      </li>
       <% end %>
-     </ul>
+        
+
+    <% else %> 
+          <li class='list'>
+            <%= link_to '#' do %>
+            <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                商品を出品してね！
+              </h3>
+              <div class='item-price'>
+                <span>99999999円<br>(税込み)</span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                  <span class='star-count'>0</span>
+                </div>
+              </div>
+            </div>
+             <% end %>
+          </li>
+        
+        
+      
+      
+
+      
+
+      
+      <%# 出品がない場合、ダミーを表示 %>
+    <% end %>
+
+      <%# 出品がない場合、ダミーを表示 %>
+    <%# <% end %> 
+     
+    </ul>
   
   </div>
   <%# /商品一覧 %>
